<resources>
    <string name="app_name">ParkMyCar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="parking_my_car">ParkingMyCar</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account_sign_in">Already Have Account? sign in</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name or Email</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="todo">TODO</string>
    <string name="new_booking">New Booking</string>
    <string name="view_booking">View Booking</string>
    <string name="booking_details">Booking Details</string>
    <string name="delete_booking">Cancel Booking</string>
    <string name="logout">LogOut</string>
    <string name="available_slots">Find Parking</string>
    <string name="booking_id">Booking Id</string>
    <string name="search">Search</string>
    <string name="user_details">User Details</string>
    <string name="provide_booking_details">Provide Booking Details</string>
    <string name="car_name">Insert Car Name</string>
    <string name="checking_time">Insert Checking Time</string>
    <string name="date">Insert Present Date</string>
    <string name="car_number">Insert Car Number</string>
    <string name="check_out_time">Insert Check Out Time</string>
    <string name="place_booking">Place Booking</string>
    <string name="bookingid">BookingID</string>
    <string name="checkin">Checkin</string>
    <string name="O_car_name">Car Name</string>
    <string name="O_car_number">Car Number</string>
    <string name="O_check_out">Check Out</string>
    <string name="date_O">Date</string>
</resources>