<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EC0B7893"
    tools:context=".ViewBooking">

    <TextView
        android:id="@+id/LogoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/audiowide"
        android:padding="10dp"
        android:text="@string/parking_my_car"
        android:textColor="#E7FFEB3B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/BookingIDTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:padding="13dp"
        android:hint="@string/bookingid"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoTextView"
        app:layout_constraintVertical_bias="0.51" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="555dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BookingIDTextView">

        <TextView
            android:id="@+id/CarNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/O_car_name"
            android:padding="10dp" />

        <TextView
            android:id="@+id/CarNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/O_car_number"
            android:padding="10dp" />

        <TextView
            android:id="@+id/CheckINTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/checkin"
            android:padding="10dp" />

        <TextView
            android:id="@+id/CheckOUTTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/O_check_out"
            android:padding="10dp" />

        <TextView
            android:id="@+id/DateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_O"
            android:padding="10dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>