<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EC0B7893"
    tools:context=".NewBooking">

    <TextView
        android:id="@+id/LogoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/audiowide"
        android:padding="10dp"
        android:text="@string/parking_my_car"
        android:textColor="#E7FFEB3B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/findParkingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:textColor="#FFC107"
        android:text="@string/available_slots"
        android:fontFamily="@font/architects_daughter"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoTextView" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findParkingTextView" />

    <TextView
        android:id="@+id/findSlotTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/architects_daughter"
        android:padding="8dp"
        android:text="@string/provide_booking_details"
        android:textColor="#FFC107"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="402dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findSlotTextView"
        tools:ignore="UselessLeaf" >

        <EditText
            android:id="@+id/CarNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="8dp"
            android:inputType="textPersonName"
            android:hint="@string/car_name"
            android:textColorHint="@color/common_google_signin_btn_text_dark"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/CarNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="8dp"
            android:inputType="number"
            android:hint="@string/car_number"
            android:textColorHint="@color/common_google_signin_btn_text_dark"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/PhoneNumberOnBookingEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="8dp"
            android:inputType="phone"
            android:hint="@string/contact_number"
            android:textColorHint="@color/common_google_signin_btn_text_dark"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/CheckingINTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="8dp"
            android:inputType="time"
            android:hint="@string/checking_time"
            android:textColorHint="@color/common_google_signin_btn_text_dark"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/CheckingOUTTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="8dp"
            android:inputType="time"
            android:hint="@string/check_out_time"
            android:textColorHint="@color/common_google_signin_btn_text_dark"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/DateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="8dp"
            android:inputType="date"
            android:hint="@string/date"
            android:textColorHint="@color/common_google_signin_btn_text_dark"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/PlaceBookingBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/common_google_signin_btn_text_dark"
            android:text="@string/place_booking" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>